--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,7 +27,7 @@ ul.topnav li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 30px 40px;
+  padding: 10px 20px;
   text-decoration:inherit;
 }
 
@@ -151,6 +151,83 @@ table{
   font-weight:400;
   text-align: center;
   text-shadow:0.5px 0.5px #EC579D;
+}
 
 
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+input[type=datetime], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+input[type=submit] {
+    background-color: lightcoral;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+.col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+
+.grid-container {
+  display: inline-grid;
+  grid-template-columns: auto auto auto;
+  background-color: black;
+  padding: 10px;
+  float: inherit;
+  width: auto;
+}
+.grid-item {
+  background-color: black;
+  border: 1px white;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.gridfont{
+color: white;
+font-size: 16px
+}
+
+.img{
+  float: left;
 }
